--- a/MongoMigrationWebApp/Components/MigrationDetails.razor
+++ b/MongoMigrationWebApp/Components/MigrationDetails.razor
@@ -2,10 +2,11 @@
 @inject IConfiguration Configuration
 @inject IJSRuntime JSRuntime
 
-@using OnlineMongoMigrationProcessor
-@using OnlineMongoMigrationProcessor.Models
 @using Microsoft.JSInterop
+@using OnlineMongoMigrationProcessor
+@using OnlineMongoMigrationProcessor.Context
 @using OnlineMongoMigrationProcessor.Helpers
+@using OnlineMongoMigrationProcessor.Models
 
 <div class="modal fade show d-block bg-dark bg-opacity-75" id="myModal" aria-modal="true" role="dialog">
     <div class="modal-dialog bg-dark">
