--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -7,7 +7,9 @@
 
 @using MongoMigrationWebApp.Components
 @using OnlineMongoMigrationProcessor
+@using OnlineMongoMigrationProcessor.Context
 @using OnlineMongoMigrationProcessor.Helpers
+
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h3 class="mb-0">
@@ -415,7 +417,7 @@
                 ViewMigration(job.Id);
             }
         }
-        
+        await InvokeAsync(StateHasChanged);
         return true;
     }
 }
