--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -12,10 +12,7 @@
 
 
 <div class="d-flex justify-content-between align-items-center mb-3">
-    <h3 class="mb-0">
-        <button class="btn btn-light" title="Download Jobs JSON" @onclick="DownloadFile" style="border: none; background: transparent;">
-            <i class="bi bi-download"></i>
-        </button>
+    <h3 class="mb-0">        
         Migration Jobs
     </h3>
     <div class="d-flex align-items-center mb-3">
@@ -79,11 +76,6 @@
             </tbody>
         </table>        
     }
-    <!--
-    <div class="d-flex align-items-center mb-3">
-        <button class="btn btn-warning mx-2" title="Use backup to recover job data if current data is corrupted or lost." @onclick="RestoreBackup">Recover Jobs</button>
-    </div>
-    -->
 }
 
 @if (_migrationDetailsPopUpOpen)
@@ -94,11 +86,6 @@
 @if (_yesNoDialogOpen)
 {
     <YesNoDialog Type="YesNoDialog.Category.DeleteNot" Caption="Confirm Delete" Message="@_message" OnClose="@YesNoDialogSubmit" />
-}
-
-@if (_recoverDialogOpen)
-{
-    <YesNoDialog Type="YesNoDialog.Category.RecoverNot" Caption="Confirm Recovery from Backup" Message="@_message" OnClose="@RestoreBackupSubmit" />
 }
 
 
@@ -120,7 +107,6 @@
     private bool _migrationDetailsPopUpOpen;
     private bool _yesNoDialogOpen;
     private bool _messageDialogOpen;
-    private bool _recoverDialogOpen;
     private bool _editSettingsOpen;
 
     private string _message = string.Empty;
@@ -130,9 +116,6 @@
 
     private string GetTootTip(MigrationJob migrationJob)
     {
-        // return string.Join(",",
-        //     @JobManager.GetMigrationUnits(migrationJob)?
-        //         .Select(mu => $"{mu.DatabaseName}.{mu.CollectionName}") ?? Enumerable.Empty<string>());
 
         return string.Join(",",
             migrationJob.MigrationUnitBasics?
@@ -168,95 +151,25 @@
 #pragma warning restore CS1998
 #pragma warning disable CS8602
 
-    private async Task DownloadFile()
-    {
-        var url = $"/api/File/download/Jobs";
-        var response = await HttpClient.GetAsync(url);
+    // private async Task DownloadFile()
+    // {
+    //     var url = $"/api/File/download/Jobs";
+    //     var response = await HttpClient.GetAsync(url);
 
-        if (response.IsSuccessStatusCode)
-        {
-            var fileBytes = await response.Content.ReadAsByteArrayAsync();
-            var contentType = response.Content.Headers.ContentType?.ToString() ?? "application/octet-stream";
+    //     if (response.IsSuccessStatusCode)
+    //     {
+    //         var fileBytes = await response.Content.ReadAsByteArrayAsync();
+    //         var contentType = response.Content.Headers.ContentType?.ToString() ?? "application/octet-stream";
 
-            // Use JavaScript to trigger the file download
-            await JS.InvokeVoidAsync("downloadFile", fileBytes, "MigrationJobs.json", contentType);
-        }
-        else
-        {
-            await JS.InvokeVoidAsync("open", url, "_blank"); // browser navigates directly
-        }
-    }
-
-    private async Task RestoreBackup()
-    {
-        // await Task.Yield();
-        // var backupDate = JobManager.GetJobBackupDate();
-
-        // if (backupDate == DateTime.MinValue)
-        // {
-        //     _message = "No backup file found.";
-        //     _messageDialogOpen = true;
-        //     return;
-        // }
-
-        // var gap = DateTime.UtcNow - backupDate;
-        // string lagString = string.Empty;
-
-        // if (gap.TotalSeconds > 0)
-        // {
-        //     lagString = $"from {(int)gap.TotalMinutes} minutes ago";
-        // }
-
-        // _message = $"Warning: This will stop ongoing jobs and overwrite current migration jobs with a backup {lagString}. Do you wish to proceed?";
-        // _recoverDialogOpen = true;
-    }
-
-    private void RestoreBackupSubmit(YesNoDialog.YesNoDialogResult result)
-    {
-        //     try
-        //     {
-        //         _recoverDialogOpen = false;
-        //         _loadingComplete = false;
-
-        //         if (!result.IsConfirmed)
-        //         {
-        //             return;
-        //         }
-
-
-        //         foreach (var job in GetMigrationsFromManager(true,false))
-        //         {
-        //             job.IsCancelled = true;
-        //             // job.CurrentlyActive = false;
-        //             job.IsStarted = false;
-        //             JobManager.CancelMigration(job.Id);
-        //         }
-        //         JobManager.StopMigration();
-
-
-
-        //         bool success = JobManager.RestoreJobsFromBackup(out string errorMessage);
-        //         if (success)
-        //         {
-        //             migrationJobs = GetMigrations();               
-        //         }
-        //         else
-        //         {
-        //             _message = errorMessage;
-        //             _messageDialogOpen = true;
-        //         }
-        //     }
-        // catch (Exception)
-        //     {
-        //         _message = "Failed to restore backup.";
-        //         _messageDialogOpen = true;
-        //     }
-        //     finally
-        //     {           
-        //         _selectedMigrationJob = null;
-        //         _loadingComplete = true;
-        //     }
-    }
+    //         // Use JavaScript to trigger the file download
+    //         await JS.InvokeVoidAsync("downloadFile", fileBytes, "MigrationJobs.json", contentType);
+    //     }
+    //     else
+    //     {
+    //         await JS.InvokeVoidAsync("open", url, "_blank"); // browser navigates directly
+    //     }
+    // }
+    
 
     private List<MigrationJob> GetMigrations()
     {
@@ -283,7 +196,6 @@
 
     private void RemoveMigration(string? id)
     {
-        //var migrationJob =JobManager.GetMigrationJobById(id) ; GetMigrations().Find(m => m.Id == id);
         _selectedMigrationJob = JobManager.GetMigrationJobById(id);       
         if (!JobManager.IsProcessRunning(id ?? string.Empty))
         {
@@ -308,7 +220,7 @@
         {
             _yesNoDialogOpen = false;
 
-            //if (result.IsConfirmed && (!_selectedMigrationJob.CurrentlyActive || !JobManager.IsProcessRunning(_selectedMigrationJob.Id)))
+
             if (result.IsConfirmed && (!JobManager.IsProcessRunning(_selectedMigrationJob?.Id ?? string.Empty)))
             {
 
@@ -319,18 +231,7 @@
 
                     try
                     {
-                        // Task.Run(() =>
-                        //    {
                         JobManager.ClearJobFiles(jobId);
-                        // });
-
-                        // var jobList = JobManager.GetJobList();
-
-                        // if (!jobList.SaveJobList())
-                        // {
-                        //     _message = "Failed to save job list."; 
-                        //     _messageDialogOpen = true;
-                        // }
                     }
                     catch { }
                 }
@@ -380,8 +281,6 @@
 
     private void StartMigrationAsync()
     {
-
-
         _selectedMigrationJob = null;
         _migrationDetailsPopUpOpen = true;
     }
