Multiple Bug Fixes

--- a/MongoMigrationWebApp/Components/MigrationDetails.razor
+++ b/MongoMigrationWebApp/Components/MigrationDetails.razor
@@ -517,7 +517,7 @@
             CSStartsAfterAllUploads = startCSAfterUploads,
             AggresiveChangeStream = aggressiveCS,
             ChangeStreamLevel = changeStreamLevel,
-            AllCollectionsUseObjectId = allCollectionsUseObjectId, // Transient flag, not persisted
+            AllCollectionsUseObjectId = allCollectionsUseObjectId, 
             MigrationUnitBasics = new List<MigrationUnitBasic>()
         };
         if (OnSubmit != null)
