--- a/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
+++ b/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
@@ -959,7 +959,7 @@ else if (@_showLogBackupFile)
                 }
 
                 // Trigger immediate refresh
-                MigrationJob = JobManager.GetMigrationJobById(JobId);// GetMigrations()(m => m.Id == JobId);
+                MigrationJob = GetMigrationJob(JobId);// GetMigrations()(m => m.Id == JobId);
                 if (MigrationJob != null && (MigrationJob.IsStarted || JobManager.DidMigrationJobExitRecently(JobId)) && !_showLogBackupFile)
                 {
                     if (_isLoadingCollections && @MigrationJob.MigrationUnitBasics != null && @MigrationJob.MigrationUnitBasics.Count > 0)
@@ -989,7 +989,7 @@ else if (@_showLogBackupFile)
     {
         _showLogBackupFile = false;
         _logBackupFile = string.Empty;  
-        MigrationJob = JobManager.GetMigrationJobById(JobId);// GetMigrations()(m => m.Id == JobId);
+        MigrationJob = GetMigrationJob(JobId);// GetMigrations()(m => m.Id == JobId);
         if (MigrationJob != null && MigrationJob.IsStarted)
         {
             // Only start timer if AutoRefreshEnabled is true (default)
@@ -1071,7 +1071,7 @@ else if (@_showLogBackupFile)
         // Marshal ALL component state changes to the UI thread to prevent cross-thread access issues
         InvokeAsync(() =>
         {
-            MigrationJob = JobManager.GetMigrationJobById(JobId);// GetMigrations()(m => m.Id == JobId);
+            MigrationJob = GetMigrationJob(JobId);// GetMigrations()(m => m.Id == JobId);
             if (MigrationJob != null && (MigrationJob.IsStarted || JobManager.DidMigrationJobExitRecently(JobId)) && !_showLogBackupFile)
             {
                 // Check if we should hide loading spinner
@@ -1121,7 +1121,7 @@ else if (@_showLogBackupFile)
             return; // Exit if the JobId does not match
         }
 
-        MigrationJob = JobManager.GetMigrationJobById(JobId);//GetMigrations()(m => m.Id == id);
+        MigrationJob = GetMigrationJob(JobId);//GetMigrations()(m => m.Id == id);
         if (MigrationJob != null && MigrationJob.IsStarted)
         {
             LogBucket = JobManager.GetLogBucket(id, out string logBackup, out bool isLive);
@@ -1192,9 +1192,25 @@ else if (@_showLogBackupFile)
         return true;
     }
 
-    protected override async Task OnParametersSetAsync()
+
+
+    private MigrationJob GetMigrationJob(string id)
     {
         MigrationJob = JobManager.GetMigrationJobById(JobId);
+        if(MigrationJob.Id == id)
+        {
+            return MigrationJob;
+        }
+        else
+        {
+            throw new Exception("Migration Job not found");            
+        }
+        //return null;
+    }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        MigrationJob = GetMigrationJob(JobId);
 
         if (MigrationJob == null) // Fixed the condition to check for null
         {
@@ -1241,10 +1257,6 @@ else if (@_showLogBackupFile)
 
         if (!string.IsNullOrEmpty(targetConnectionString))
             MigrationJobContext.TargetConnectionString[mj.Id] = targetConnectionString;
-
-        // Copy connection strings from the provided job into the current migration
-        // mj.SourceConnectionString = job.SourceConnectionString;
-        // mj.TargetConnectionString = job.TargetConnectionString;
 
         // MigrationJob.CurrentlyActive = true;
         mj.IsCancelled = false;
