--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -298,7 +298,7 @@
         {
             if (_selectedMigrationJob == null)
             {
-                var jobList = JobManager.GetJobList();
+                //var jobList = JobManager.GetJobList();
 
                 // Store connection strings if provided
                 if (!string.IsNullOrEmpty(sourceConnectionString))
@@ -307,11 +307,11 @@
                 if (!string.IsNullOrEmpty(targetConnectionString))
                     MigrationJobContext.TargetConnectionString[job.Id] = targetConnectionString;
 
-                jobList.MigrationJobIds.Add(job.Id);
+                MigrationJobContext.JobList.MigrationJobIds.Add(job.Id);
                 job.IsStarted = true;
 
                 MigrationJobContext.SaveMigrationJob(job);
-                MigrationJobContext.SaveJobList(jobList);
+                MigrationJobContext.SaveJobList();
                 
                 ViewMigration(job.Id);
             }
