--- a/MongoMigrationWebApp/Pages/Login.razor
+++ b/MongoMigrationWebApp/Pages/Login.razor
@@ -6,11 +6,11 @@
 @inject PasswordManager PasswordManager
 @inject NavigationManager Navigation
 
-<PageTitle>Login - MongoDB Migration</PageTitle>
+<PageTitle>Login - Migrate to Azure DocumentDB</PageTitle>
 
 <div class="login-container">
     <div class="login-box">
-        <h2>Authentication Required</h2>
+        <h2>Login</h2>
         <p>Please enter the password to access the application.</p>
 
         <EditForm Model="@loginModel" OnValidSubmit="@HandleLogin">
