Bug Fixes: Percentage reporting

--- a/MongoMigrationWebApp/Pages/ChangePassword.razor
+++ b/MongoMigrationWebApp/Pages/ChangePassword.razor
@@ -10,7 +10,7 @@
 <div class="login-container">
     <div class="login-box">
         <h2>@(isFirstTime ? "Set Your Password" : "Change Password")</h2>
-        <p>@(isFirstTime ? "Please set a new password for your application." : "Enter your current password and choose a new one.")</p>
+        <p>@(isFirstTime ? "Welcome! Please set a password to secure this migration tool." : "Enter your current password and choose a new one.")</p>
 
         <EditForm Model="@model" OnValidSubmit="@HandleSubmit">
             @if (!isFirstTime)
