--- a/MongoMigrationWebApp/Shared/MainLayout.razor
+++ b/MongoMigrationWebApp/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager Navigation
 
 <AuthenticationGuard>
-    <PageTitle>MongoDB Migration</PageTitle>
+    <PageTitle>Migrate to Azure DocumentDB</PageTitle>
 
     <div class="page">
         <main>
