--- a/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
+++ b/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
@@ -542,12 +542,12 @@ else if (@_showLogBackupFile)
     // Log level filtering
     private LogType SelectedLogLevel
     {
-        get => MigrationJob?.MinimumLogLevel ?? LogType.Info;
+        get => MigrationJob?.LogLevel ?? LogType.Info;
         set
         {
             if (MigrationJob != null)
             {
-                MigrationJob.MinimumLogLevel = value;
+                MigrationJob.LogLevel = value;
             }
         }
     }
